<resources>
    <string name="pluto___library_name">Pluto</string>

    <string name="pluto___tab_logger">Logger</string>
    <string name="pluto___tab_network">Network</string>
    <string name="pluto___tab_crash">Crashes &amp; ANRs</string>
    <string name="pluto___tab_shared_pref">Shared Preferences</string>
    <string name="pluto___search">Search log</string>
    <string name="pluto___search_preference">Search key</string>
    <string name="pluto___search_api">Search API Call</string>
    <string name="pluto___search_crash">Search Exceptions</string>
    <string name="pluto___save_preference">Update Value</string>
    <string name="pluto___delete">Delete</string>
    <string name="pluto___share">Share</string>
    <string name="pluto___thread_state_label">Thread</string>
    <string name="pluto___thread_states_label">Thread States</string>
    <string name="pluto___priority_label">Priority</string>
    <string name="pluto___daemon_label">is_Daemon</string>
    <string name="pluto___app_state_label">App State</string>
    <string name="pluto___device_label">Device Info</string>
    <string name="pluto___app_version_label">App Version</string>
    <string name="pluto___android_os_label">Android OS</string>
    <string name="pluto___android_api_level_label">Android API Level</string>
    <string name="pluto___orientation_label">Orientation</string>
    <string name="pluto___rooted_label">is_Rooted</string>
    <string name="pluto___height_label">Height</string>
    <string name="pluto___size_label">Size</string>
    <string name="pluto___density_label">Density</string>
    <string name="pluto___width_label">Width</string>
    <string name="pluto___unsupported_preference">updating StringSet preferences is not supported.</string>
    <string name="pluto___network_tab_overview">Overview</string>
    <string name="pluto___network_tab_request">Request</string>
    <string name="pluto___network_tab_response">Response</string>
    <string name="pluto___network_proxy_settings_enabled_description">showing response from</string>
    <string name="pluto___headers_title">Headers</string>
    <string name="pluto___query_params_title">Query Params</string>
    <string name="pluto___body_title">Body</string>
    <string name="pluto___exception_title">Exception</string>
    <string name="pluto___no_headers">~ No Headers</string>
    <string name="pluto___placeholder_status_code">200</string>
    <string name="pluto___network_state_in_progress">In Progress</string>
    <string name="pluto___network_state_failed">Failed</string>
    <string name="pluto___url_label">URL</string>
    <string name="pluto___waiting_for_response">~ Waiting for response</string>
    <string name="pluto___method_label">Method</string>
    <string name="pluto___ssl_label">is_SSL</string>
    <string name="pluto___protocol_label">Protocol</string>
    <string name="pluto___request_time_label">Requested at</string>
    <string name="pluto___response_time_label">Response received at</string>
    <string name="pluto___delay_label">Delay (milliseconds)</string>
    <string name="pluto___na">~ NA</string>
    <string name="pluto___welcome_toast">Pluto is initialised successfully!\nTap on notification to view.</string>
    <string name="pluto___easy_access_setup_title">Enable Easy Access</string>
    <string name="pluto___easy_access_setup_description">Enable this settings to add an Easy Access floating handler over your application to access the library.</string>
    <string name="pluto___easy_access_setup_cta">Enable settings</string>
    <string name="pluto___easy_access_setup_dismiss">Dismiss</string>
    <string name="pluto___no_logs_text">No Logs printed.</string>
    <string name="pluto___no_api_text">No API call detected.</string>
    <string name="pluto___no_search_result">No search result found.</string>
    <string name="pluto___settings">Settings</string>
    <string name="pluto___about">About</string>
    <string name="pluto___settings_easy_access_title">Enable Easy Access</string>
    <string name="pluto___settings_clear_crashes_title">Clear all crash logs</string>
    <string name="pluto___update">Update</string>
    <string name="pluto___settings_shared_pref_title">Show Shared Preference for</string>
    <string name="pluto___settings_shared_pref_description">Configure which Shared Preference files are displayed in the Shared Preferences tab.</string>
    <string name="pluto___settings_link_mocklets_title">Link Mocklets Account</string>
    <string name="pluto___link">Link</string>
    <string name="pluto___settings_link_mocklets_description">Connect you Mocklets account to manage your network proxy setting efficiently</string>
    <string name="pluto___all_settings">See All</string>
    <string name="pluto___network_proxy_settings">Network Proxy Settings</string>
    <string name="pluto___delete_all_apis">Delete All Calls</string>
    <string name="pluto___delete_console_logs">Delete All Logs</string>
    <string name="pluto___delete_console_crashes">Delete All Crash logs</string>
    <string name="pluto___shared_pref_filter">Filter Settings</string>
    <string name="pluto___no_crashes_text">No Crashes.</string>
    <string name="pluto___network_proxy_settings_request_label">Request URL</string>
    <string name="pluto___network_proxy_settings_proxy_label">Redirect call to</string>
    <string name="pluto___save_settings">Save Settings</string>
    <string name="pluto___choose_from_mocklets">Choose API from Mocklets</string>
    <string name="pluto___request_url_label">Enter the https request URL</string>
    <string name="pluto___enter_mock_manually">You can either enter the mock API url manually\nor</string>
    <string name="pluto___setup_api_proxy">Setup API Proxy for future calls</string>
    <string name="pluto___update_api_proxy">Update Settings</string>
    <string name="pluto___your_application">App Properties</string>
    <string name="pluto___app_state_note">Click the property to copy the value.</string>
    <string name="pluto___no_app_properties">No App Properties set</string>
    <string name="pluto___learn_more">Learn more</string>
    <string name="pluto___edit_preference">Edit Preference</string>
    <string name="pluto___log_details">Log Details</string>
    <string name="pluto___preference_filter_note">Select Preference to see the data from it.</string>
    <string name="pluto___no_preference_present">No Preference found.\nAdd a preference or check filter settings.</string>
    <string name="pluto___shared_pref_edit_file_label">showing preference from</string>
    <string name="pluto___event_attributes">Event Attributes</string>
    <string name="pluto___crash_report_title">Oops! this looks like our miss.</string>
    <string name="pluto___crash_report_subtitle">Tap here to report this crash to us, so that you don\'t have to face this crash again.</string>
    <string name="pluto___easy_access_handler_content_description">open Pluto</string>
    <string name="pluto___exit_pluto">Exit Pluto</string>
    <string name="pluto___open_app_properties">Open App Properties</string>
    <string name="pluto___open_settings">Open Settings</string>
    <string name="pluto___exit_settings">exit settings</string>
    <string name="pluto___exit_app_properties">Exit app properties</string>
    <string name="pluto___exit_crash_details">Exit Crash details</string>
    <string name="pluto___open_crash_menu">open crash menu</string>
    <string name="pluto___exit_network_call_details">exit network call details</string>
    <string name="pluto___open_shared_pref_menu">open shared preferences menu</string>
    <string name="pluto___exit_network_proxy_settings">exit network proxy settings</string>
    <string name="pluto___exit_network_proxy_edit">exit network proxy edit</string>
    <string name="pluto___open_network_menu">open network menu</string>
    <string name="pluto___open_logs_menu">open logs menu</string>
    <string name="pluto___settings_easy_access_appearance_mode_title">Set Dark mode for Access popup</string>
    <string name="pluto___settings_easy_access_appearance_handed_title">Enable Right handed mode for Access popup</string>
    <string name="pluto___notification_title">Pluto is debugging %s</string>
    <string name="pluto___notification_subtitle">Tap here to view complete debug report</string>
    <string name="pluto___body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="pluto___body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="pluto___settings_reset_all_title">Reset all data</string>
    <string name="pluto___settings_reset_all_description">This is clear all the data and app state. Choose this if the library is stuck in an unexpected error.</string>
    <string name="pluto___reset">Reset</string>
    <string name="pluto___reset_all_success_message">Library data reset successful</string>
    <string name="pluto___crash_notification_title">Pluto detected a crash in %s</string>
    <string name="pluto___crash_notification_subtitle">Tap here to see crash details.</string>
    <string name="pluto___copy_curl_code">Share Request cURL</string>
    <string name="pluto___curl_copied">cURL code copied!</string>
    <string name="pluto___clear">Clear</string>
    <string name="pluto___preferences_cleared">Preference selection cleared!</string>
    <string name="pluto___search_api_content">Search API content</string>
    <string name="pluto___anr_list_message">Main thread unresponsive for +%d ms</string>
    <string name="pluto___anr_list_title">ANR detected</string>
    <string name="pluto___search_app_properties">Search App Property</string>
    <string name="pluto___exit_network_proxy_list">exit network proxy list screen</string>
    <string name="pluto___no_network_proxy">No Network Proxy found</string>
    <string name="pluto___create_new_proxy_settings">New</string>
    <string name="pluto___proxy_edit_note">Changes will be reflected in future API calls</string>
    <string name="pluto___https">https://</string>
    <string name="pluto___copied_from_mocklets">URL auto filled by Mocklets selection</string>
    <string name="pluto___search_network_proxy">Search proxy settings</string>
    <string name="pluto___share_as_text">Share as Text</string>
    <string name="pluto___share_as_file">Share as File</string>
    <string name="pluto___share_as_copy">Copy to Clipboard</string>
    <string name="pluto___share_as_file_hint">Prefer this option while sharing on Slack.</string>
    <string name="pluto___processing_body">~ Laaarge response body,\nworking hard to process it…</string>
    <string name="pluto___content_truncated">~~ CONTENT TRUNCATED ~~</string>
    <string name="pluto___custom_actions">Custom actions</string>
</resources>
