<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    tools:background="@color/pluto___app_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pluto___margin_medium"
        android:layout_marginTop="@dimen/pluto___margin_large"
        android:layout_marginEnd="@dimen/pluto___margin_medium"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/pluto___settings_shared_pref_title"
        android:textColor="@color/pluto___text_dark"
        android:textSize="@dimen/pluto___text_xmedium"
        app:layout_constraintEnd_toStartOf="@+id/cta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pluto___margin_mini"
        android:layout_marginBottom="@dimen/pluto___margin_large"
        android:ellipsize="end"
        android:fontFamily="@font/muli"
        android:text="@string/pluto___settings_shared_pref_description"
        android:textColor="@color/pluto___text_dark_40"
        android:textSize="@dimen/pluto___text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/cta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/pluto___margin_medium"
        android:fontFamily="@font/muli_bold"
        android:text="@string/pluto___update"
        android:textColor="@color/pluto___blue"
        android:textSize="@dimen/pluto___text_small"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="@dimen/pluto___margin_medium"
        app:layout_constraintTop_toTopOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>