<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pluto___app_bg"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.BaseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pluto___app_bg"
        android:theme="@style/PlutoTheme.AppBarOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/pluto___exit_app_properties"
                    android:padding="@dimen/pluto___margin_medium"
                    android:src="@drawable/pluto___ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="@+id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/pluto___margin_medium"
                    android:paddingBottom="@dimen/pluto___margin_medium"
                    android:text="@string/pluto___your_application"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/pluto___text_dark"
                    android:textSize="@dimen/pluto___text_xmedium"
                    app:layout_constraintEnd_toStartOf="@+id/search"
                    app:layout_constraintStart_toEndOf="@+id/close"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/pluto___search_app_properties"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/pluto___margin_small"
                    android:paddingLeft="@dimen/pluto___margin_small"
                    android:paddingEnd="@dimen/pluto___margin_medium"
                    android:paddingRight="@dimen/pluto___margin_medium"
                    android:src="@drawable/pluto___ic_search"
                    android:text="@string/pluto___delete"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/pluto___text_dark_80"
                    android:textSize="@dimen/pluto___text_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/pluto___margin_xsmall"
                android:layout_marginVertical="@dimen/pluto___margin_mini"
                android:elevation="@dimen/pluto___margin_medium"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/pluto___margin_xsmall"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="@+id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/closeSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/pluto___exit_network_call_details"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                        android:src="@drawable/pluto___ic_arrow_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/pluto___margin_xsmall"
                        android:layout_marginLeft="@dimen/pluto___margin_xsmall"
                        android:autofillHints="@string/pluto___library_name"
                        android:background="@null"
                        android:fontFamily="@font/muli_semibold"
                        android:hint="@string/pluto___search_app_properties"
                        android:inputType="text"
                        android:textColor="@color/pluto___text_dark"
                        android:textColorHint="@color/pluto___text_dark_40"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/clearSearch"
                        app:layout_constraintStart_toEndOf="@+id/closeSearch"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/clearSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/pluto___exit_network_call_details"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                        android:src="@drawable/pluto___ic_close_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/note"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pluto___dark_05"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:padding="@dimen/pluto___margin_medium"
            android:text="@string/pluto___app_state_note"
            android:textColor="@color/pluto___text_dark_60"
            android:textSize="@dimen/pluto___text_xxsmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/noAppProperties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/pluto___no_app_properties"
            android:textColor="@color/pluto___text_dark_40"
            android:textSize="@dimen/pluto___text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noAppPropertiesCta"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/muli_bold"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:paddingHorizontal="@dimen/pluto___margin_medium"
            android:paddingVertical="@dimen/pluto___margin_xsmall"
            android:text="@string/pluto___learn_more"
            android:textColor="@color/pluto___blue"
            android:textSize="@dimen/pluto___text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noAppProperties" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/noAppPropertiesGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="noAppProperties,noAppPropertiesCta" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>