<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pluto___bg_bottom_sheet">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pluto___margin_large"
        android:drawableStart="@drawable/pluto___ic_easy_access"
        android:drawablePadding="@dimen/pluto___margin_mini"
        android:fontFamily="@font/muli_bold"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/pluto___margin_small"
        android:text="@string/pluto___easy_access_setup_title"
        android:textColor="@color/pluto___text_dark_80"
        android:textSize="@dimen/pluto___text_small"
        app:layout_constraintEnd_toStartOf="@+id/dismiss"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/pluto___margin_large"
        android:drawableLeft="@drawable/pluto___ic_easy_access"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/muli_semibold"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/pluto___margin_large"
        android:text="@string/pluto___easy_access_setup_dismiss"
        android:textColor="@color/pluto___text_dark_40"
        android:textSize="@dimen/pluto___text_small"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pluto___bg_bottom_sheet_content"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/pluto___margin_medium"
            android:paddingVertical="@dimen/pluto___margin_large">

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pluto___margin_xsmall"
                android:fontFamily="@font/muli"
                android:letterSpacing="0.04"
                android:text="@string/pluto___easy_access_setup_description"
                android:textColor="@color/pluto___text_dark_60"
                android:textSize="@dimen/pluto___text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9" />

            <TextView
                android:id="@+id/cta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pluto___margin_xsmall"
                android:fontFamily="@font/muli_bold"
                android:foreground="?android:attr/selectableItemBackground"
                android:letterSpacing="0.04"
                android:lineSpacingExtra="6sp"
                android:paddingHorizontal="@dimen/pluto___margin_small"
                android:paddingVertical="@dimen/pluto___margin_small"
                android:text="@string/pluto___easy_access_setup_cta"
                android:textColor="@color/pluto___blue"
                android:textSize="@dimen/pluto___text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>