<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pluto___white"
    tools:context=".modules.logging.ui.LogsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/pluto___item_log" />

    <TextView
        android:id="@+id/noItemText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:text="@string/pluto___no_crashes_text"
        android:textColor="@color/pluto___text_dark_40"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pluto___app_bg"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pluto___margin_small"
            android:background="@color/pluto___white"
            android:elevation="@dimen/pluto___margin_medium"
            app:cardCornerRadius="@dimen/pluto___margin_xsmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/pluto___library_name"
                    android:drawablePadding="@dimen/pluto___margin_xsmall"
                    android:background="@null"
                    android:drawableStart="@drawable/pluto___ic_search"
                    android:hint="@string/pluto___search_crash"
                    android:fontFamily="@font/muli_semibold"
                    android:padding="@dimen/pluto___margin_small"
                    android:inputType="text"
                    android:textColor="@color/pluto___text_dark"
                    android:textColorHint="@color/pluto___text_dark_40"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/more"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawableLeft="@drawable/pluto___ic_search"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pluto___margin_small"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/pluto___ic_more_vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/search"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/pluto___open_crash_menu"
                    app:layout_constraintTop_toTopOf="@+id/search" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/pluto___dp_1"
        android:background="@color/pluto___dark_05"
        app:layout_constraintTop_toTopOf="@+id/bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>